; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/duck/jetfire/extr_matrix.c_init_ports.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/duck/jetfire/extr_matrix.c_init_ports.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DDRD = common dso_local global i32 0, align 4
@DDRB = common dso_local global i32 0, align 4
@DDRE = common dso_local global i32 0, align 4
@DDRF = common dso_local global i32 0, align 4
@DDRC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @init_ports to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_ports() #0 {
  %1 = load i32, i32* @DDRD, align 4
  %2 = and i32 %1, 208
  store i32 %2, i32* @DDRD, align 4
  %3 = load i32, i32* @DDRB, align 4
  %4 = and i32 %3, 127
  store i32 %4, i32* @DDRB, align 4
  %5 = load i32, i32* @DDRE, align 4
  %6 = and i32 %5, 251
  store i32 %6, i32* @DDRE, align 4
  %7 = load i32, i32* @DDRF, align 4
  %8 = or i32 %7, 3
  store i32 %8, i32* @DDRF, align 4
  %9 = load i32, i32* @DDRC, align 4
  %10 = or i32 %9, 192
  store i32 %10, i32* @DDRC, align 4
  %11 = load i32, i32* @DDRB, align 4
  %12 = or i32 %11, 113
  store i32 %12, i32* @DDRB, align 4
  %13 = load i32, i32* @DDRD, align 4
  %14 = or i32 %13, 128
  store i32 %14, i32* @DDRD, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
